--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "idsp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
@@ -16,7 +16,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/IDSP-LendItOut/LendItOut/issues"
   },
@@ -27,12 +26,12 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
-
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
+    "sass": "^1.87.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
-  }
+  },
+  "description": ""
 }
-
