--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es2020", // Update target to ES2020 or later
-    "module": "es2020", // Use ES2020 modules
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src/static/event.ts"
-  ]
+  "ts-node": {
+    "esm": true
+  },
+  "include": ["src"]
 }
