--- a/package.json
+++ b/package.json
@@ -26,21 +26,28 @@
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "bcrypt": "^5.1.1",
+    "connect-redis": "^8.0.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "firebase": "^11.6.1",
-    "firebase-admin": "^13.3.0"
+    "firebase-admin": "^13.3.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.2",
+    "redis": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/ejs": "^3.1.5",
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/firebase": "^2.4.32",
     "@types/node": "^22.15.3",
+    "@types/nodemailer": "^6.4.17",
     "prisma": "^6.7.0",
     "sass": "^1.87.0",
     "ts-node": "^10.9.2",
