--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./node_modules/@types",
+      "./types"
+    ]
   },
 }
