MBA-61-making-a-post-22

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ SESSION_SECRET="fullstacked"
 
 EMAIL_USER="sooah921219@gmail.com"
 EMAIL_PASS="incwpzjvbwmfjqft"
+
+GOOGLE_MAP="AIzaSyDtjxl9wd_IFRGHY96_McYqCHVymAKcPWI"
