--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@faker-js/faker": "^9.7.0",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@types/multer": "^1.4.12",
     "bcrypt": "^5.1.1",
     "connect-redis": "^8.0.3",
     "cookie-parser": "^1.4.7",
@@ -36,6 +37,7 @@
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "redis": "^5.0.0"
   },
