--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mogodb": "^0.0.1-security",
+    "mongodb": "^6.16.0",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "redis": "^5.0.0",
