--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@faker-js/faker": "^9.7.0",
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@sendgrid/mail": "^8.1.5",
     "@types/multer": "^1.4.12",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
