--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@prisma/client": "^6.7.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@types/multer": "^1.4.12",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "connect-redis": "^8.0.3",
     "cookie-parser": "^1.4.7",
