--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "sass": "^1.87.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
   "description": ""
