--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "mogodb": "^0.0.1-security",
     "mongodb": "^6.16.0",
+    "mongoose": "^8.14.3",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.2",
     "redis": "^5.0.0",
