--- a/.env
+++ b/.env
@@ -4,9 +4,10 @@ FIREBASE_API_KEY="AIzaSyAs4PRWPEjR4VM9c6Q5ltWuXj71SXVoIE8"
 
 SESSION_SECRET="fullstacked"
 
-EMAIL_USER="sooah921219@gmail.com"
-EMAIL_PASS="incwpzjvbwmfjqft"
-
 GOOGLE_MAP="AIzaSyDtjxl9wd_IFRGHY96_McYqCHVymAKcPWI"
 
 UNSPLASH_ACCESS_KEY="k-AhHlw7se0F0Eo49jW5XHCI_h9A9JTttl3MdcfdPec"
+
+
+EMAIL_USER="popo6243@gmail.com"
+EMAIL_PASS="incwpzjvbwmfjqft"
