MBA-148-bug-forgot-password-feature-email-sending-error

--- a/.env
+++ b/.env
@@ -9,5 +9,4 @@ GOOGLE_MAP="AIzaSyDtjxl9wd_IFRGHY96_McYqCHVymAKcPWI"
 UNSPLASH_ACCESS_KEY="k-AhHlw7se0F0Eo49jW5XHCI_h9A9JTttl3MdcfdPec"
 
 
-EMAIL_USER="popo6243@gmail.com"
-EMAIL_PASS="incwpzjvbwmfjqft"
+# need to add email API 
