--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
+    "method-override": "^3.0.0",
     "mogodb": "^0.0.1-security",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.3",
@@ -55,6 +56,7 @@
     "@types/express": "^5.0.1",
     "@types/express-session": "^1.18.1",
     "@types/firebase": "^2.4.32",
+    "@types/method-override": "^3.0.0",
     "@types/node": "^22.15.3",
     "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.1",
